--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,7 @@
 buildscript {
     repositories {
-        mavenLocal()
-        mavenCentral()
-        maven { url "https://plugins.gradle.org/m2/" }
+        /*mavenLocal()*/
+        /*mavenCentral()*/
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         jcenter()
         google()
@@ -27,9 +26,10 @@ allprojects {
     }
 
     repositories {
-        mavenLocal()
-        mavenCentral()
         google()
+        jcenter()
+        /*mavenLocal()*/
+        /*mavenCentral()*/
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
     }
